--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
       </plugins>
     </pluginManagement>
     <plugins>
+      <!-- Jar -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -112,6 +113,7 @@
           </execution>
         </executions>
       </plugin>
+      <!-- Plexus -->
       <plugin>
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-maven-plugin</artifactId>
@@ -173,12 +175,6 @@
       </dependency>
 
       <dependency>
-        <groupId>org.codehaus.plexus</groupId>
-        <artifactId>plexus-container-default</artifactId>
-        <version>1.5.5</version>
-      </dependency>
-
-      <dependency>
         <groupId>org.apache.maven.plugin-tools</groupId>
         <artifactId>maven-plugin-annotations</artifactId>
         <version>${mavenPluginPluginVersion}</version>
@@ -200,6 +196,11 @@
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-utils</artifactId>
         <version>3.0.10</version>
+      </dependency>
+      <dependency>
+        <groupId>org.codehaus.plexus</groupId>
+        <artifactId>plexus-container-default</artifactId>
+        <version>1.5.5</version>
       </dependency>
 
       <dependency>
