--- a/decode-password-plugin/pom.xml
+++ b/decode-password-plugin/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.mcmartins.maven</groupId>
     <artifactId>plugins</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
   </parent>
   <groupId>com.mcmartins.maven</groupId>
   <artifactId>decode-password-plugin</artifactId>
